class AppStrings {
  //Workout entry screen String constants
  static const String enterWorkoutDetails = 'Enter Workout Details';
  static const String editWorkout = 'Edit Workout';
  static const String selectExercise = 'Select Exercise';
  static const String selectWeight = 'Select Weight';
  static const String enterRepetitions = 'Enter Repetitions';
  static const String updateWorkout = 'Update Workout';
  static const String submitWorkout = 'Submit';
  static const String viewWorkoutList = 'View Workout List';
  static const String selectedWorkoutDetails = 'Selected: ';

  //Workout list screen String constants
  static const String workoutListTitle = 'Workout List';
  static const String noWorkoutsMessage = 'No workouts added yet';
  static const String workoutDeletedMessage = 'Workout deleted';
}
