enum Weight {
  weight40kg('40kg'),
  weight45kg('45kg'),
  weight50kg('50kg'),
  weight70kg('70kg'),
  weight75kg('75kg');

  const Weight(this.label);
  final String label;
}
